# synapse

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.cache/: start_viewer.bat
Aethr/: README.md
docs/: aethr-architecture.md
src/a2a_local/apps/: _alt.py  _server.py  claude.py  codex.py
src/a2a_local/channel/: broker.py  broker_server.py  db.py  mcp_shim.py  protocol.py  viewer.py  ws_client.py
src/a2a_local/executors/: echo_relay.py
tests/: test_cards.py  test_channel_broker.py  test_channel_claims.py  test_channel_db.py  test_channel_e2e_broker.py  test_channel_git_ops.py  test_channel_mcp_shim.py  test_channel_protocol.py  test_channel_ws_client.py  test_decide.py  test_peer_down.py  test_pingpong.py  test_relay.py
warroom/channel/: broker.py  broker_server.py  cli.py  db.py  git_ops.py  mcp_shim.py  protocol.py  viewer.py  ws_client.py
warroom/channel/web/: index.html
